--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -14,6 +14,7 @@ services:
     command: >
       --api.dashboard
       --providers.docker
+      --providers.file.directory=/etc/traefik
       --entrypoints.websecure.address=:443
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
