--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -16,6 +16,8 @@ services:
       --providers.docker
       --providers.file.directory=/etc/traefik
       --entrypoints.websecure.address=:443
+      --entrypoints.websecure.forwardedHeaders.trustedIPs=172.0.0.1/32,192.168.1.0/24
+      --entrypoints.websecure.proxyProtocol.trustedIPs=172.0.0.1/32,192.168.1.0/24
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./config:/etc/traefik
