--- a/authentik/.env.example
+++ b/authentik/.env.example
@@ -1,6 +1,7 @@
 PG_PASS=""
 PG_USER="authentik"
 PG_DATABASE="authentik"
+AUTHENTIK_SECRET_KEY=""
 AUTHENTIK_REDIS__HOST="authentik-redis"
 AUTHENTIK_POSTGRESQL__HOST="authentik-postgresql"
 AUTHENTIK_POSTGRESQL__USER="authentik"
