Adjust Authentik compose stack

--- a/authentik/.env.example
+++ b/authentik/.env.example
@@ -1,6 +1,6 @@
 PG_PASS=""
 PG_USER="authentik"
-PG_DATABASE="authentik"
+PG_DB="authentik"
 AUTHENTIK_SECRET_KEY=""
 AUTHENTIK_REDIS__HOST="authentik-redis"
 AUTHENTIK_POSTGRESQL__HOST="authentik-postgresql"
