--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -14,6 +14,7 @@ services:
     command: >
       --api.dashboard
       --providers.docker
+      --providers.docker.exposedByDefault=false
       --providers.file.directory=/etc/traefik
       --entrypoints.websecure.address=:443
       --entrypoints.websecure.forwardedHeaders.trustedIPs=172.0.0.1/32,192.168.1.0/24
