Prepare forward proxy auth

--- a/authentik/.env.example
+++ b/authentik/.env.example
@@ -1,7 +1,9 @@
 PG_PASS=""
 PG_USER="authentik"
 PG_DB="authentik"
+AUTHENTIK_HOST="https://id.bodkys.house"
 AUTHENTIK_SECRET_KEY=""
+AUTHENTIK_INSECURE="false"
 AUTHENTIK_REDIS__HOST="authentik-redis"
 AUTHENTIK_POSTGRESQL__HOST="authentik-postgresql"
 AUTHENTIK_POSTGRESQL__USER="authentik"
