--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -6,6 +6,7 @@ services:
       traefik.enable: true
       traefik.http.routers.api.entrypoints: websecure
       traefik.http.routers.api.rule: Host(`traefik.bodkys.house`)
+      traefik.http.routers.api.middlewares: authentik@file
       traefik.http.routers.api.tls: true
       traefik.http.routers.api.service: api@internal
     ports:
@@ -19,15 +20,12 @@ services:
       --entrypoints.websecure.forwardedHeaders.insecure=true
       --entrypoints.websecure.proxyProtocol.insecure=true
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./config:/etc/traefik
     restart: unless-stopped
     networks:
       - traefik
-      - authentik
 
 networks:
   traefik:
-    external: true
-  authentik:
     external: true
