--- a/traefik/config/middleware.yaml
+++ b/traefik/config/middleware.yaml
@@ -1,7 +1,7 @@
 http:
   middlewares:
-    auth:
-      forwardauth:
+    authentik:
+      forwardAuth:
         address: http://authentik:9000/outpost.goauthentik.io/auth/traefik
         trustForwardHeader: true
         authResponseHeaders:
@@ -16,24 +16,3 @@ http:
           - X-authentik-meta-provider
           - X-authentik-meta-app
           - X-authentik-meta-version
-    securityHeaders:
-      headers:
-        customResponseHeaders:
-          X-Robots-Tag: "none,noarchive,nosnippet,notranslate,noimageindex"
-          server: ""
-          X-Forwarded-Proto: "https"
-        sslProxyHeaders:
-          X-Forwarded-Proto: https
-        referrerPolicy: "same-origin"
-        hostsProxyHeaders:
-          - "X-Forwarded-Host"
-        customRequestHeaders:
-          X-Forwarded-Proto: "https"
-        contentTypeNosniff: true
-        browserXssFilter: true
-        forceSTSHeader: true
-        stsIncludeSubdomains: true
-        stsSeconds: 63072000
-        stsPreload: true
-    gzip:
-      compress: {}
