--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -1,7 +1,7 @@
 services:
   traefik:
     container_name: traefik
-    image: traefik:v2.11.2
+    image: cgr.dev/chainguard/traefik:latest
     labels:
       traefik.enable: true
       traefik.http.routers.api.entrypoints: websecure
@@ -17,8 +17,6 @@ services:
       --providers.docker.exposedByDefault=false
       --providers.file.directory=/etc/traefik
       --entrypoints.websecure.address=:443
-      --entrypoints.websecure.forwardedHeaders.insecure=true
-      --entrypoints.websecure.proxyProtocol.insecure=true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./config:/etc/traefik
